@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-01T02:27:12Z",
+  "timestamp" : "2022-07-01T08:29:29Z",
   "count_outdated" : 642,
   "uniques_outdated" : 333,
-  "count" : 669,
-  "uniques" : 347,
+  "count" : 671,
+  "uniques" : 349,
   "clones" : [
     {
       "timestamp": "2022-06-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -88,6 +88,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-01T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
