@@ -1,10 +1,10 @@
 {
-  "count": 27,
-  "uniques": 3,
+  "count": 29,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-06-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -61,6 +61,11 @@
       "timestamp": "2022-06-30T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-01T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
