@@ -1,3 +1,10 @@
+2022-07-01T08:29:29Z:
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 333 642 / 347 669
+* notice: next accum: outdated-unq outdated-all / unq all: 333 642 / 349 671
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -1 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-06-17 2022-07-01]
+
 2022-07-01T02:27:12Z:
 * notice: last 14d: unq all: 3 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 331 639 / 346 667
